Readme upate and few cosmetic changes.

--- a/src/BlazorComponents/Shared/ChartJs.cshtml
+++ b/src/BlazorComponents/Shared/ChartJs.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="row">
-    <button @onclick(CallJS)>Call JavaScript</button>
+    <button @onclick(CallJS)>Display Chart</button>
 </div>
 <div class="row">
     <div class="container">
