--- a/samples/TestApplication/Shared/NavMenu.cshtml
+++ b/samples/TestApplication/Shared/NavMenu.cshtml
@@ -18,13 +18,8 @@
                     </NavLink>
                 </li>
                 <li>
-                    <NavLink href="/counter">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </NavLink>
-                </li>
-                <li>
-                    <NavLink href="/fetchdata">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <NavLink href="/linechart">
+                        <span class='glyphicon glyphicon-education'></span> Line Chart
                     </NavLink>
                 </li>
             </ul>
