--- a/src/BlazorComponents/Shared/ChartJsRadarChart.cshtml
+++ b/src/BlazorComponents/Shared/ChartJsRadarChart.cshtml
@@ -10,25 +10,21 @@
 @functions {
 
     [Parameter]
-    ChartJSChart<ChartJsLineDataset> Chart { get; set; }
+    ChartJSChart<ChartJSRadarDataset> Chart { get; set; }
     [Parameter]
     int Width { get; set; } = 200;
     [Parameter]
     int Height { get; set; } = 200;
+
     private string ChartjsChart { get; set; } = "";
 
     protected override void OnAfterRender()
     {
-        ChartJSInterop.InitializeLineChart(Chart);
+        ChartJSInterop.InitializeRadarChart(Chart);
     }
 
-    void DisplayChart()
+    public void UpdateChart(ChartJSChart<ChartJSRadarDataset> updatedChart)
     {
-        ChartJSInterop.InitializeLineChart(Chart);
-    }
-
-    public void UpdateChart(ChartJSChart<ChartJsLineDataset> updatedChart)
-    {
-        ChartJSInterop.UpdateLineChart(updatedChart);
+        ChartJSInterop.UpdateRadarChart(updatedChart);
     }
 }
