--- a/samples/TestApplication/Pages/Index.cshtml
+++ b/samples/TestApplication/Pages/Index.cshtml
@@ -1,14 +1,19 @@
 ﻿@page "/"
+@using BlazorComponents.Shared
 
-
-<h2>Chart JS charts using Blazor</h2>
-
-<ChartJsBarChart Chart="@blazorBarChartJS" Width="600" Height="300" />
+<div class="container">
+    <h2>Chart JS charts using Blazor</h2>
+    <div class="row">
+        <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
+    </div>
+    <ChartJsBarChart ref="barChartJs" Chart="@blazorBarChartJS" Width="600" Height="300" />
+</div>
 
 
 @functions {
 
     public ChartJSChart<ChartJsBarDataset> blazorBarChartJS { get; set; } = new ChartJSChart<ChartJsBarDataset>();
+    ChartJsBarChart barChartJs;
 
     protected override void OnInit()
     {
@@ -44,5 +49,28 @@
                 }
             }
         };
+    }
+
+    public void UpdateChart()
+    {
+        //Update existing dataset
+        blazorBarChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
+        var firstDataSet = blazorBarChartJS.Data.Datasets[0];
+        firstDataSet.Data.Add(DateTime.Now.Second);
+
+        //Add new dataset
+        //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
+        //{
+        //    BackgroundColor = "#cc65fe",
+        //    BorderColor = "#cc65fe",
+        //    Label = "# of Votes from blazor 1",
+        //    Data = new List<int> {20,21,12,3,4,4},
+        //    Fill = true,
+        //    BorderWidth = 2,
+        //    PointRadius = 3,
+        //    PointBorderWidth = 1
+        //});
+
+        barChartJs.UpdateChart(blazorBarChartJS);
     }
 }
