--- a/samples/TestApplication/Pages/LineChart.cshtml
+++ b/samples/TestApplication/Pages/LineChart.cshtml
@@ -1,65 +1,71 @@
 ﻿@page "/LineChart"
-
+@using BlazorComponents.Shared
 
 <h2>Chart JS charts using Blazor</h2>
+<div class="row">
+    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
+</div>
+<ChartJsLineChart ref="lineChartJs" Chart="@blazorLineChartJS" Width="600" Height="300" />
 
-<ChartJsLineChart Chart="@blazorLineChartJS" Width="600" Height="300" UpdateChart="@((chart) => { UpdateChart(chart); })" />
+@functions{
 
-@functions {
+    public ChartJSChart<ChartJsLineDataset> blazorLineChartJS { get; set; } = new ChartJSChart<ChartJsLineDataset>();
+    ChartJsLineChart lineChartJs;
 
-public ChartJSChart<ChartJsLineDataset> blazorLineChartJS { get; set; } = new ChartJSChart<ChartJsLineDataset>();
-
-protected override void OnInit()
-{
-    blazorLineChartJS = new ChartJSChart<ChartJsLineDataset>()
+    protected override void OnInit()
     {
-        ChartType = "line",
-        CanvasId = "myFirstLineChart",
-        Options = new ChartJsOptions()
+
+        blazorLineChartJS = new ChartJSChart<ChartJsLineDataset>()
         {
-            Text = "Sample chart from Blazor",
-            Display = true
-        },
-        Data = new ChartJsData<ChartJsLineDataset>()
-        {
-            Labels = new List<string>() { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
-            Datasets = new List<ChartJsLineDataset>()
+            ChartType = "line",
+            CanvasId = "myFirstLineChart",
+            Options = new ChartJsOptions()
             {
-                new ChartJsLineDataset()
-                {
-                    BackgroundColor = "#ff6384",
-                    BorderColor = "#ff6384",
-                    Label = "# of Votes from blazor",
-                    Data = new List<int>{ 19,12,5,3,3,2},
-                    Fill = true,
-                    BorderWidth = 2,
-                    PointRadius = 3,
-                    PointBorderWidth=1
-                }   
+                Text = "Sample chart from Blazor",
+                Display = true,
+                Responsive = false
+            },
+            Data = new ChartJsData<ChartJsLineDataset>()
+            {
+                Labels = new List<string>() { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
+                Datasets = new List<ChartJsLineDataset>()
+                 {
+                        new ChartJsLineDataset()
+                        {
+                            BackgroundColor = "#ff6384",
+                            BorderColor = "#ff6384",
+                            Label = "# of Votes from blazor",
+                            Data = new List<int>{ 19,12,5,3,3,2},
+                            Fill = false,
+                            BorderWidth = 2,
+                            PointRadius = 3,
+                            PointBorderWidth=1
+                        }
+                 }
             }
-        }
-    };
-}
+        };
+    }
 
+    public void UpdateChart()
+    {
+        //Update existing dataset
+        blazorLineChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
+        var firstDataSet = blazorLineChartJS.Data.Datasets[0];
+        firstDataSet.Data.Add(DateTime.Now.Second);
 
-public void UpdateChart(ChartJSChart<ChartJsLineDataset> chartItem)
-{
-    //Update existing dataset
-    chartItem.Data.Labels.Add($"New{DateTime.Now.Second}");
-    var firstDataSet = chartItem.Data.Datasets[0];
-    firstDataSet.Data.Add(DateTime.Now.Second);
+        //Add new dataset
+        //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
+        //{
+        //    BackgroundColor = "#cc65fe",
+        //    BorderColor = "#cc65fe",
+        //    Label = "# of Votes from blazor 1",
+        //    Data = new List<int> {20,21,12,3,4,4},
+        //    Fill = true,
+        //    BorderWidth = 2,
+        //    PointRadius = 3,
+        //    PointBorderWidth = 1
+        //});
 
-    //Add new dataset
-    //chartItem.Data.Datasets.Add(new ChartJsLineDataset()
-    //{
-    //    BackgroundColor = "#cc65fe",
-    //    BorderColor = "#cc65fe",
-    //    Label = "# of Votes from blazor 1",
-    //    Data = new List<int> {20,21,12,3,4,4},
-    //    Fill = true,
-    //    BorderWidth = 2,
-    //    PointRadius = 3,
-    //    PointBorderWidth = 1
-    //});
-}
+        lineChartJs.UpdateChart(blazorLineChartJS);
+    }
 }
