--- a/samples/TestApplication/Shared/MainLayout.cshtml
+++ b/samples/TestApplication/Shared/MainLayout.cshtml
@@ -1,16 +1,15 @@
-﻿@implements ILayoutComponent
+﻿@inherits BlazorLayoutComponent
 
-<div class='container-fluid'>
-    <div class='row'>
-        <div class='col-sm-3'>
-            <NavMenu />
-        </div>
-        <div class='col-sm-9'>
-            @Body
-        </div>
-    </div>
+<div class="sidebar">
+    <NavMenu />
 </div>
 
-@functions {
-    public RenderFragment Body { get; set; }
-}
+<div class="main">
+    <div class="top-row px-4">
+        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+    </div>
+
+    <div class="content px-4">
+        @Body
+    </div>
+</div>
