--- a/samples/TestApplication/Shared/NavMenu.cshtml
+++ b/samples/TestApplication/Shared/NavMenu.cshtml
@@ -1,28 +1,35 @@
-﻿<div class='main-nav'>
-    <div class='navbar navbar-inverse'>
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-            </button>
-            <a class='navbar-brand' href='/'>TestApplication</a>
-        </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse'>
-            <ul class='nav navbar-nav'>
-                <li>
-                    <NavLink href="/" Match=NavLinkMatch.All>
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </NavLink>
-                </li>
-                <li>
-                    <NavLink href="/linechart">
-                        <span class='glyphicon glyphicon-education'></span> Line Chart
-                    </NavLink>
-                </li>
-            </ul>
-        </div>
-    </div>
+﻿<div class="top-row pl-4 navbar navbar-dark">
+    <a class="navbar-brand" href="/">Blazor ChartJS</a>
+    <button class="navbar-toggler" onclick=@ToggleNavMenu>
+        <span class="navbar-toggler-icon"></span>
+    </button>
 </div>
+
+<div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
+    <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/" Match=NavLinkMatch.All>
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Bar Chart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/linechart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Chart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/radarchart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Radar Chart
+            </NavLink>
+        </li>
+    </ul>
+</div>
+
+@functions {
+bool collapseNavMenu = true;
+
+void ToggleNavMenu()
+{
+    collapseNavMenu = !collapseNavMenu;
+}
+}
