Added support for bubble chart

--- a/samples/TestApplication/Pages/Index.cshtml
+++ b/samples/TestApplication/Pages/Index.cshtml
@@ -37,14 +37,14 @@
                         Label = "# of Votes from blazor",
                         BackgroundColor = "#cc65fe",
                         BorderColor = "#cc65fe",
-                        Data = new List<int>(){ 19,12,5,3,3,2}
+                        Data = new List<dynamic>(){ 19,12,5,3,3,2}
                     },
                     new ChartJsBarDataset()
                     {
                         Label = "# of Likes from blazor",
                         BackgroundColor = "#36a2eb",
                         BorderColor = "#36a2eb",
-                        Data = new List<int>(){ 30,10,15,13,13,12}
+                        Data = new List<dynamic>(){ 30,10,15,13,13,12}
                     }
                 }
             }
