--- a/samples/TestApplication/Pages/LineChart.cshtml
+++ b/samples/TestApplication/Pages/LineChart.cshtml
@@ -36,7 +36,7 @@
                             BackgroundColor = "#ff6384",
                             BorderColor = "#ff6384",
                             Label = "# of Votes from blazor",
-                            Data = new List<int>{ 19,12,5,3,3,2},
+                            Data = new List<dynamic>{ 19,12,5,3,3,2},
                             Fill = false,
                             BorderWidth = 2,
                             PointRadius = 3,
