--- a/samples/TestApplication/Shared/NavMenu.cshtml
+++ b/samples/TestApplication/Shared/NavMenu.cshtml
@@ -22,6 +22,11 @@
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Radar Chart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/bubblechart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Bubble Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
