--- a/samples/TestApplication/Pages/Index.cshtml
+++ b/samples/TestApplication/Pages/Index.cshtml
@@ -19,7 +19,7 @@
     {
         blazorBarChartJS = new ChartJSChart<ChartJsBarDataset>()
         {
-            ChartType = "bar",
+            ChartType = ChartTypes.bar,
             CanvasId = "myFirstBarChart",
             Options = new ChartJsOptions()
             {
