--- a/samples/TestApplication/Pages/LineChart.cshtml
+++ b/samples/TestApplication/Pages/LineChart.cshtml
@@ -18,7 +18,7 @@
 
         blazorLineChartJS = new ChartJSChart<ChartJsLineDataset>()
         {
-            ChartType = "line",
+            ChartType = ChartTypes.line,
             CanvasId = "myFirstLineChart",
             Options = new ChartJsOptions()
             {
