--- a/samples/TestApplication/Pages/RadarChart.cshtml
+++ b/samples/TestApplication/Pages/RadarChart.cshtml
@@ -5,66 +5,65 @@
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsRadarChart ref="radarChartJs" Chart="@blazorRadarChartJS" Width="600" Height="300" />
+<ChartJsRadarChart ref="radarChartJs" Chart="@blazorRadarChartJS" Width="600" Height="300"/>
 
 @functions {
 
-public ChartJSChart<ChartJSRadarDataset> blazorRadarChartJS { get; set; } = new ChartJSChart<ChartJSRadarDataset>();
-ChartJsRadarChart radarChartJs;
+    public ChartJSChart blazorRadarChartJS { get; set; } = new ChartJSChart();
+    ChartJsRadarChart radarChartJs;
 
-protected override void OnInit()
-{
-
-    blazorRadarChartJS = new ChartJSChart<ChartJSRadarDataset>()
+    protected override void OnInit()
     {
-        ChartType = ChartTypes.radar,
-        CanvasId = "myFirstRadarChart",
-        Options = new ChartJsOptions()
+        blazorRadarChartJS = new ChartJSChart()
         {
-            Text = "Sample chart from Blazor",
-            Display = true
-        },
-        Data = new ChartJsData<ChartJSRadarDataset>()
-        {
-            Labels = new List<string>() { "Eating", "Drinking", "Social", "Coding", "Cycling", "Running" },
-            Datasets = new List<ChartJSRadarDataset>()
-    {
-        new ChartJSRadarDataset()
-        {
-            BackgroundColor = "#ff6384",
-            Label = "1st Dataset",
-            Data = new List<dynamic>{ 19,12,5,3,3,2},
-            BorderWidth = 2,
-            RadarChartPointStyle = RadarChartPointStyles.star,
-            PointBackgroundColor = "#a4cef0",
-            PointRadius = 5,
-            PointBorderWidth=1
-        }
+            ChartType = ChartTypes.RADAR.ToString(),
+            CanvasId = "myFirstRadarChart",
+            Options = new ChartJsOptions()
+            {
+                Text = "Sample chart from Blazor",
+                Display = true
+            },
+            Data = new ChartJsData()
+            {
+                Labels = new List<string>() {"Eating", "Drinking", "Social", "Coding", "Cycling", "Running"},
+                Datasets = new List<ChartJsDataset>()
+                {
+                    new ChartJSRadarDataset()
+                    {
+                        BackgroundColor = "#ff6384",
+                        Label = "1st Dataset",
+                        Data = new List<dynamic> {19, 12, 5, 3, 3, 2},
+                        BorderWidth = 2,
+                        RadarChartPointStyle = RadarChartPointStyles.star,
+                        PointBackgroundColor = "#a4cef0",
+                        PointRadius = 5,
+                        PointBorderWidth = 1
+                    }
+                }
+            }
+        };
     }
-        }
-    };
-}
 
-public void UpdateChart()
-{
+    public void UpdateChart()
+    {
     //Update existing dataset
-    blazorRadarChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
-    var firstDataSet = blazorRadarChartJS.Data.Datasets[0];
-    firstDataSet.Data.Add(DateTime.Now.Second);
+        blazorRadarChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
+        var firstDataSet = blazorRadarChartJS.Data.Datasets[0];
+        (firstDataSet as ChartJsDataset).Data.Add(DateTime.Now.Second);
 
     //Add new dataset
-    blazorRadarChartJS.Data.Datasets.Add(new ChartJSRadarDataset()
-    {
-        BackgroundColor = "#cc65fe",
-        BorderColor = "#cc65fe",
-        Label = "2nd Dataset",
-        Data = new List<dynamic> { 20, 21, 12, 3, 4, 4 },
-        BorderWidth = 2,
-        PointRadius = 3,
-        PointBorderWidth = 1
-    });
+        blazorRadarChartJS.Data.Datasets.Add(new ChartJSRadarDataset()
+        {
+            BackgroundColor = "#cc65fe",
+            BorderColor = "#cc65fe",
+            Label = "2nd Dataset",
+            Data = new List<dynamic> {20, 21, 12, 3, 4, 4},
+            BorderWidth = 2,
+            PointRadius = 3,
+            PointBorderWidth = 1
+        });
 
-    radarChartJs.UpdateChart(blazorRadarChartJS);
-}
+        radarChartJs.UpdateChart(blazorRadarChartJS);
+    }
 
 }
