--- a/samples/TestApplication/Shared/NavMenu.cshtml
+++ b/samples/TestApplication/Shared/NavMenu.cshtml
@@ -27,6 +27,11 @@
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Bubble Chart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/mixedchart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Mixed Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
