--- a/samples/TestApplication/Pages/Index.cshtml
+++ b/samples/TestApplication/Pages/Index.cshtml
@@ -6,18 +6,18 @@
     <div class="row">
         <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
     </div>
-    <ChartJsBarChart ref="barChartJs" Chart="@blazorBarChartJS" Width="600" Height="300" />
+    <ChartJsBarChart ref="barChartJs" Chart="@blazorBarChartJS" Width="600" Height="300"/>
 </div>
 
 
 @functions {
 
-    public ChartJSChart blazorBarChartJS { get; set; } = new ChartJSChart();
+    public ChartJSChart blazorBarChartJS { get; set; }
     ChartJsBarChart barChartJs;
 
     protected override void OnInit()
     {
-        blazorBarChartJS = new ChartJSChart()
+        blazorBarChartJS = blazorBarChartJS ?? new ChartJSChart()
         {
             ChartType = ChartTypes.BAR.ToString(),
             CanvasId = "myFirstBarChart",
@@ -29,7 +29,7 @@
             },
             Data = new ChartJsData()
             {
-                Labels = new List<string>() { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
+                Labels = new List<string>() {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
                 Datasets = new List<ChartJsDataset>()
                 {
                     new ChartJsBarDataset()
@@ -37,40 +37,47 @@
                         Label = "# of Votes from blazor",
                         BackgroundColor = "#cc65fe",
                         BorderColor = "#cc65fe",
-                        Data = new List<dynamic>(){ 19,12,5,3,3,2}
+                        Data = new List<dynamic>() {19, 12, 5, 3, 3, 2}
                     },
                     new ChartJsBarDataset()
                     {
                         Label = "# of Likes from blazor",
                         BackgroundColor = "#36a2eb",
                         BorderColor = "#36a2eb",
-                        Data = new List<dynamic>(){ 30,10,15,13,13,12}
+                        Data = new List<dynamic>() {30, 10, 15, 13, 13, 12}
                     }
                 }
             }
         };
     }
 
+    protected override void OnAfterRender()
+    {
+        Console.WriteLine("OnAfterRender");
+        barChartJs.UpdateChart(blazorBarChartJS);
+    }
+
     public void UpdateChart()
     {
-        //Update existing dataset
+    //Update existing dataset
         blazorBarChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
         var firstDataSet = blazorBarChartJS.Data.Datasets[0];
         (firstDataSet as ChartJsDataset).Data.Add(DateTime.Now.Second);
 
-        //Add new dataset
-        //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
-        //{
-        //    BackgroundColor = "#cc65fe",
-        //    BorderColor = "#cc65fe",
-        //    Label = "# of Votes from blazor 1",
-        //    Data = new List<int> {20,21,12,3,4,4},
-        //    Fill = true,
-        //    BorderWidth = 2,
-        //    PointRadius = 3,
-        //    PointBorderWidth = 1
-        //});
+    //Add new dataset
+    //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
+    //{
+    //    BackgroundColor = "#cc65fe",
+    //    BorderColor = "#cc65fe",
+    //    Label = "# of Votes from blazor 1",
+    //    Data = new List<int> {20,21,12,3,4,4},
+    //    Fill = true,
+    //    BorderWidth = 2,
+    //    PointRadius = 3,
+    //    PointBorderWidth = 1
+    //});
 
         barChartJs.UpdateChart(blazorBarChartJS);
     }
+
 }
