--- a/samples/TestApplication/Shared/NavMenu.cshtml
+++ b/samples/TestApplication/Shared/NavMenu.cshtml
@@ -37,6 +37,11 @@
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Pie Chart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/doughnutchart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Doughnut Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
